# telegram_tracker_bot

./: .gitignore  README.md  main.py  pyproject.toml
data/: init7.db
src/job_tracker/: __init__.py  db.py  jobs.py  logger.py  telegram_bot.py
